--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar_div {
+  width: 100%;
+  height: 60px;
+  box-shadow: 2px 5px 5px #D9D9D9;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.navbar_div2 {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.button_div2 {
+  width: 223px;
+  height: 128px;
+  background: #458DFF;
+  box-shadow: 20px 10px 40px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+
+.button_div2 h5 {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
   color: white;
+  margin-top: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+#clear_ {
+  color: white;
+  position: absolute;
+  right: 3px;
+  top: 3px;
+  font-size: 32px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button_div {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 155px;
+}
+
+.home_div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 70vh;
+  overflow: auto;
+}
+
+.home_div2 {
+  width: 85%;
+  min-height: 250px;
+  /* background: red; */
+}
+
+.home_div2 img {
+  width: 100%;
+  height: 158px;
+  margin-top: 30px;
 }
